2006-02-27 - standa
Virtual* propagated into all FT2 functions as they need DPI information
eventually.
Font ID is now an adjusted family_name+style_name hashcode (stays the
same if you add a font to your setup - if doesn't conflict with any
previously added font).

2006-02-26 - standa
Hardcoded 95DPI for the FT2 vst_font() height until we adjust the code
to propagate the vwk and get wvk->screen.pixel.height * 25400.
Pixmap glyph storage added to get bitmap from getbitmap_info even when
antialias is on.
Little un-#if0ying in ft2.c.

2006-02-24 - johan
Proper prototypes for stack change calls.
Fix for too long names in vqt_xfntnames().

2006-02-23 - standa
Fixed an obvious bug which might have caused a buffer overflow for
'non-antialias' mode and bitmap FT2 fonts.
A memory optimization in PIXMAP glyph pitch size.

2006-02-23 - johan
Replaced a bunch of strcpy() with strncpy().

2006-02-22 - johan
Significant optimizations for FreeType2 rendering from cached bitmaps.
Fixed rendering bug for overlapping characters.
File cache system consistency check added.
Bug fix for problem with zero size FreeType2 font request.

2006-02-21 - standa
FT2 antialiasing with a small help of the aranym driver which is now
able to expandArea() with 8bit chunky data (mfdb_standard = 0x0100).
Small adjustments in fixed witdth fonts detection and short font
name in the vqt_fontheader().

2006-02-21 - johan
FT2 alternative for vqt_fontheader -> PapyrusX knows about font names.
A couple of bug fixes.

2006-02-20 - standa
FT2 alternatives for vqt_xfntinfo(), vqt_getbitmap_info() and
vqt_advance() -> PapyrusX displays the text quite reasonably now.

2006-02-20 - johan
Nearly complete implementation of vqt_xfntinfo.
Preliminary implementation of vqt_fontheader.

2006-02-18 - johan
Added whole file caching system for FreeType2 engine.
Made it possible to redirect debug output to a file.

2006-02-10 - johan
Added a couple of debug options for the bitplane mouse.