@@ -1,7 +1,7 @@
 *****
 * fVDI structure declarations, by Johan Klockars
 *
-* $Id: types.inc,v 1.13 2006-02-21 01:07:38 johan Exp $
+* $Id: types.inc,v 1.14 2006-02-28 21:21:51 standa Exp $
 *
 * This is auto-generated by the Makefile from fvdi.h using
 *  gcc -E -DANONYMOUS fvdi.h | structer Virtual=vwk Workstation=wk \
@@ -27,66 +27,67 @@ vwk_text_colour	equ	8
 vwk_text_colour_background	equ	8
 vwk_text_colour_foreground	equ	10
 vwk_text_rotation	equ	12
-vwk_text_alignment	equ	14
-vwk_text_alignment_horizontal	equ	14
-vwk_text_alignment_vertical	equ	16
-vwk_text_character	equ	18
-vwk_text_character_width	equ	18
-vwk_text_character_height	equ	20
-vwk_text_cell	equ	22
-vwk_text_cell_width	equ	22
-vwk_text_cell_height	equ	24
-vwk_text_effects	equ	26
-vwk_text_current_font	equ	28
-vwk_line	equ	32
-vwk_line_type	equ	32
-vwk_line_colour	equ	34
-vwk_line_colour_background	equ	34
-vwk_line_colour_foreground	equ	36
-vwk_line_ends	equ	38
-vwk_line_ends_beginning	equ	38
-vwk_line_ends_end	equ	40
-vwk_line_width	equ	42
-vwk_line_user_mask	equ	44
-vwk_bezier	equ	46
-vwk_bezier_on	equ	46
-vwk_bezier_depth_scale	equ	48
-vwk_marker	equ	50
-vwk_marker_type	equ	50
-vwk_marker_colour	equ	52
-vwk_marker_colour_background	equ	52
-vwk_marker_colour_foreground	equ	54
-vwk_marker_size	equ	56
-vwk_marker_size_width	equ	56
-vwk_marker_size_height	equ	58
-vwk_fill	equ	60
-vwk_fill_interior	equ	60
-vwk_fill_colour	equ	62
-vwk_fill_colour_background	equ	62
-vwk_fill_colour_foreground	equ	64
-vwk_fill_style	equ	66
-vwk_fill_perimeter	equ	68
-vwk_fill_user	equ	70
-vwk_fill_user_pattern	equ	70
-vwk_fill_user_pattern_in_use	equ	70
-vwk_fill_user_pattern_extra	equ	74
-vwk_fill_user_multiplane	equ	78
-vwk_console	equ	80
-vwk_console_cursor	equ	80
-vwk_console_reversed	equ	82
-vwk_console_pos	equ	84
-vwk_console_pos_x	equ	84
-vwk_console_pos_y	equ	86
-vwk_clip	equ	88
-vwk_clip_on	equ	88
-vwk_clip_rectangle	equ	90
-vwk_clip_rectangle_x1	equ	90
-vwk_clip_rectangle_y1	equ	92
-vwk_clip_rectangle_x2	equ	94
-vwk_clip_rectangle_y2	equ	96
-vwk_mode	equ	98
-vwk_palette	equ	100
-vwk_struct_size	equ	104
+vwk_text_charmap	equ	14
+vwk_text_alignment	equ	16
+vwk_text_alignment_horizontal	equ	16
+vwk_text_alignment_vertical	equ	18
+vwk_text_character	equ	20
+vwk_text_character_width	equ	20
+vwk_text_character_height	equ	22
+vwk_text_cell	equ	24
+vwk_text_cell_width	equ	24
+vwk_text_cell_height	equ	26
+vwk_text_effects	equ	28
+vwk_text_current_font	equ	30
+vwk_line	equ	34
+vwk_line_type	equ	34
+vwk_line_colour	equ	36
+vwk_line_colour_background	equ	36
+vwk_line_colour_foreground	equ	38
+vwk_line_ends	equ	40
+vwk_line_ends_beginning	equ	40
+vwk_line_ends_end	equ	42
+vwk_line_width	equ	44
+vwk_line_user_mask	equ	46
+vwk_bezier	equ	48
+vwk_bezier_on	equ	48
+vwk_bezier_depth_scale	equ	50
+vwk_marker	equ	52
+vwk_marker_type	equ	52
+vwk_marker_colour	equ	54
+vwk_marker_colour_background	equ	54
+vwk_marker_colour_foreground	equ	56
+vwk_marker_size	equ	58
+vwk_marker_size_width	equ	58
+vwk_marker_size_height	equ	60
+vwk_fill	equ	62
+vwk_fill_interior	equ	62
+vwk_fill_colour	equ	64
+vwk_fill_colour_background	equ	64
+vwk_fill_colour_foreground	equ	66
+vwk_fill_style	equ	68
+vwk_fill_perimeter	equ	70
+vwk_fill_user	equ	72
+vwk_fill_user_pattern	equ	72
+vwk_fill_user_pattern_in_use	equ	72
+vwk_fill_user_pattern_extra	equ	76
+vwk_fill_user_multiplane	equ	80
+vwk_console	equ	82
+vwk_console_cursor	equ	82
+vwk_console_reversed	equ	84
+vwk_console_pos	equ	86
+vwk_console_pos_x	equ	86
+vwk_console_pos_y	equ	88
+vwk_clip	equ	90
+vwk_clip_on	equ	90
+vwk_clip_rectangle	equ	92
+vwk_clip_rectangle_x1	equ	92
+vwk_clip_rectangle_y1	equ	94
+vwk_clip_rectangle_x2	equ	96
+vwk_clip_rectangle_y2	equ	98
+vwk_mode	equ	100
+vwk_palette	equ	102
+vwk_struct_size	equ	106
 
 wk_driver	equ	0
 wk_screen	equ	4
